<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="server_client_id">883656660285-r2gcd6r1t9dbpu4ddlasavgkp2ra376v.apps.googleusercontent.com</string>
    <string name="app_name">ФСФР Экзамены</string>
    <string name="exam_base">Базовый экзамен</string>
    <string name="exam_1">Экзамен серии 1.0</string>
    <string name="exam_2">Экзамен серии 2.0</string>
    <string name="exam_3">Экзамен серии 3.0</string>
    <string name="exam_4">Экзамен серии 4.0</string>
    <string name="exam_5">Экзамен серии 5.0</string>
    <string name="exam_6">Экзамен серии 6.0</string>
    <string name="exam_7">Экзамен серии 7.0</string>
    <string name="average_exam_score">Средний бал: 0</string>
    <string name="training">Тренировка</string>
    <string name="fcp_mail">fcpunlimited@gmail.com</string>
    <string name="play_store_url">http://play.google.com/store/apps/details?id=</string>
    <string name="exam">Экзамен</string>
    <string name="by_chapters">По главам</string>
    <string name="questions">Вопросы</string>
    <string name="favourite">Избранное</string>
    <string name="get_100_score">Наберите 100 баллов</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="discussions">Обсуждения</string>
    <string name="add_discussions_empty_text">Для добавления вопроса нажмите \"+\" в правом верхнем углу экрана</string>
    <string name="discussion_negative_like_comment_show_btn">Показать</string>
    <string name="discussion_negative_like_text">Обсуждение набрало большое количество отрицательных оценок и было скрыто</string>
    <string name="something_went_wrong">Что-то пошло не так, попробуйте позже</string>
    <string name="ask_question">Задайте вопрос</string>
    <string name="error_realm_config">Не удалось подключиться к базе данных</string>
    <string name="action_canceled">Действие отменено</string>
    <string name="discussion_add_comment_hint">Введите комментарий</string>
    <string name="discussion_negative_like_comment_text">Комментарий набрал большое количество отрицательных оценок и был скрыт</string>
    <string name="comments">Коментарии:</string>
    <string name="Answers">Ответы:</string>
    <string name="message_error_text">Поле не может быть пустым</string>
    <string name="results">Результаты</string>
    <string name="mail_to">Задать вопрос</string>
    <string name="like">Оставить отзыв</string>
    <string name="options">Настройки</string>
    <string name="other">Прочее</string>
    <string name="internet_connection_error">Проверьте подключение к сети</string>
    <string name="rateApp">Оцените приложение</string>
    <string name="rate">Оценить</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_message">Хотите авторизироваться для получения возможности просмотра комментариев и участия в обсуждении вопросов?</string>
    <string name="unable_to_get_purchases">Проверьте подключение к интернету</string>
    <string name="later">Позже</string>
    <string name="rateDescription">Если вам понравилось приложение, пожалуйста оцените его и напишите в коментариях чего вам не хватает и что бы вы хотели увидеть в следующих обновлениях. \n\nСпасибо за поддержку!</string>
    <string name="my_exams">Мои Экзамены</string>
    <string name="discussion_add_menu">Добавить</string>
    <string name="add_discussion_text">Задайте интересующий вас вопрос, этот вопрос будет виден всем пользователям.</string>
    <string name="discussion_add_question_hint">Введите вопрос</string>
    <string name="show_solution">Показать решение</string>
    <string name="solution">Решение</string>
    <string name="hide_hint">Скрыть решение</string>
    <string name="need_auth_message">Чтобы видеть обсуждения задач необходимо авторизироваться. Это можно сделать нажав на иконку в верхнем правом углу бокового меню на главном экране приложения</string>
    <string name="authentication">Авторизация</string>
    <string name="search_menu_show_answers">Неправильные ответы</string>
    <string name="trial_version">Ограниченная версия</string>
    <string name="trial_message">В выбранной версии экзамена в режиме \"Тренировка\" и \"По главам\" вам будет доступно ограниченное количество вопросов из начала каждой главы, режим \"Избранное\" и поиск по вопросам недоступен. В режиме \"Экзамен\" ограничений нет.\n\nДля снятия всех ограничений в текущем экзамене купите полную версию.</string>
    <string name="trial_search_message">В выбранной версии экзамена режим \"Избранное\" и поиск по вопросам недоступен.\n\nДля снятия всех ограничений в текущем экзамене купите полную версию.</string>
    <string name="buy">Купить</string>
    <string name="cancel">Пропустить</string>
    <string name="pref_favourite">Избранное</string>
    <string name="pref_statistics">Статистика</string>
    <string name="pref_other">Прочее</string>
    <string name="shuffle_answers_description">Перемешивание ответов в \"Экзамене\", \"Тренировке\" и Избранном</string>
    <string name="add_wrong_answers_to_favourite">Автодобавление в избранное</string>
    <string name="add_wrong_answers_to_favourite_description">При неправильном ответе, вопрос добавится в избранное</string>
    <string name="remove_right_answers_from_favourite">Автоудаление из избранного</string>
    <string name="remove_right_answers_from_favourite_description">При правильном ответе вопрос удалится из избранного</string>
    <string name="remove_statistics">Сбросить статистику</string>
    <string name="clear_favourite">Очистить \"Избранное\"</string>
    <string name="clear_favourite_description">Удаление всех вопросов из избранного в текущем типе экзамена</string>
    <string name="remove_statistics_description">Сброс статистики в текущем типе экзамена</string>
    <string name="shuffle_answers">Перемешать ответы</string>
    <string name="like_description">Напишите, что бы вы хотели улучшить в приложении</string>
    <string name="info_description">Описание приложения</string>
    <string name="info">Информация</string>
    <string name="clear_favourite_dialog">Вы действительно хотите удалить все вопросы из избранного \  </string>
    <string name="clear_statistic_dialog">Вы действительно хотите очистить статистику \  </string>
    <string name="clear_base_exam_description">\  базового экзамна?</string>
    <string name="clear_serial_exam_description">\  серии\" экзамена?</string>
    <string name="favourite_cleared">Все вопросы удалены</string>
    <string name="statistics_cleared">Статистика сброшена</string>
    <string name="statistics_is_empty">Статистики еще нет</string>
    <string name="favourite_is_empty">В избранном нет вопросов</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="standaloneMod">"Приложение в автономном режиме, так как не удалось получить сведения о купленных экзаменах, в этом режиме контент будет ограничен. \n\nПроверьте подключение к интернету для перехода в обычный режим"</string>
    <string name="programDescription">- В режиме \"Экзамен\" вам необходимо набрать минимум 80 баллов для успешного завершения экзамена. Вопросы подбираются случайным образом на общую сумму в 100 баллов.\n\n- В режиме \"Тренировка\" вам будет предложено 100 случайных вопросов, также будут показаны правильные ответы.\n\n- В режиме \"По главам\" вам будут предложены все вопросы выбранной главы, также будут показаны правильные ответы.\n\n- В режиме \"Поиск по вопросу\" вам будут показаны правильные ответы на все вопросы с возможностью найти вопрос по ключевым словам.</string>
    <string name="search">Поиск</string>
    <string name="key_word">Введите ключевое слово</string>


</resources>
